tests/output/self_hosted/wrong_args_method_error.txt
tests/wrong_args_method_error.oomph:2: error: expected 1 argument, got 2

    print("asdf".split("a", "b"))
           ^^^^^^^^^^^^

